Fix BASE64 Problems with SUN
Как мы знаем, Java отказывается от проприетарного софта
Короче, я предлагаю, как нормальный человек, использовать commons-codec от апача
Потому предлагаю заменить ненадежные функции, связанные с Base64, надежными и открытыми